--- a/app/src/main/res/layout/drawer_view_maps.xml
+++ b/app/src/main/res/layout/drawer_view_maps.xml
@@ -28,8 +28,7 @@
             android:layout_height="wrap_content"
             android:paddingTop="10dp"
             android:text="PlaceBook"
-            android:textAppearance="@style/
-TextAppearance.AppCompat.Body1" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
