--- a/app/src/main/res/layout/activity_bookmark_details.xml
+++ b/app/src/main/res/layout/activity_bookmark_details.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="bookmarkDetailsView"
@@ -54,7 +55,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/name"
+                    android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
+                    app:layout_constraintEnd_toStartOf="@+id/barrier1"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintBaseline_toBaselineOf="@+id/editTextName"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageViewPlace" />
@@ -80,6 +84,9 @@
                     android:layout_height="wrap_content"
                     android:inputType="textMultiLine"
                     android:text="@string/notes"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toStartOf="@+id/barrier1"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintBaseline_toBaselineOf="@+id/editTextNotes"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textViewCategoryLabel" />
@@ -88,8 +95,11 @@
                     style="@style/BookmarkLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
                     android:text="@string/phone"
                     app:layout_constraintBaseline_toBaselineOf="@+id/editTextPhone"
+                    app:layout_constraintEnd_toStartOf="@+id/barrier1"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textViewNotes" />
                 <androidx.appcompat.widget.AppCompatTextView
@@ -98,6 +108,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/address"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintBaseline_toBaselineOf="@+id/editTextAddress"
                     app:layout_constraintEnd_toStartOf="@+id/barrier1"
                     app:layout_constraintStart_toStartOf="parent"
@@ -119,6 +131,7 @@
                     android:hint="@string/name"
                     android:layout_marginTop="16dp"
                     android:layout_marginStart="16dp"
+                    android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/barrier1"
                     app:layout_constraintTop_toBottomOf="@+id/imageViewPlace" />
@@ -153,7 +166,9 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:hint="@string/enter_notes"
+                    android:layout_marginTop="16dp"
                     android:layout_marginStart="16dp"
+                    android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/barrier1"
                     app:layout_constraintTop_toBottomOf="@+id/spinnerCategory" />
@@ -164,7 +179,9 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:hint="@string/phone_number"
+                    android:layout_marginTop="16dp"
                     android:layout_marginStart="16dp"
+                    android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/barrier1"
                     app:layout_constraintTop_toBottomOf="@+id/editTextNotes" />
@@ -176,7 +193,9 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/address"
                     android:inputType="textMultiLine"
+                    android:layout_marginTop="16dp"
                     android:layout_marginStart="16dp"
+                    android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/barrier1"
                     app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
