--- a/app/src/main/res/layout/content_bookmark_info.xml
+++ b/app/src/main/res/layout/content_bookmark_info.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
         android:adjustViewBounds="true"
         android:maxWidth="200dp"
         android:scaleType="fitStart"
